components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__round_detail_complete.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: complete.render_text()
---
<scm round> forward_round1 — [TMP]/scm/1001
direction  : forward
progress   : complete — added WT_CL (p = 7.744e-6, dOFV = -20.000)
reference  : base/1001_base.mod (OFV 1000.000)
candidates :
  WT_CL        add WT_CL        succeeded  OFV 980.000  dOFV -20.000  p 7.744e-6 (significant)  <- selected
      forward_round1/1001_wt_cl.mod                no ofv
      forward_round1/1001_wt_cl_try2.mod           succeeded
      heuristics: parameter near boundary
  CRCL_CL      add CRCL_CL      succeeded  OFV 996.000  dOFV -4.000  p 0.0455 (not significant)
      forward_round1/1001_crcl_cl.mod              succeeded
  WT_V         add WT_V         unusable
      forward_round1/1001_wt_v.mod                 program aborted
      forward_round1/1001_wt_v_try2.mod            program aborted
      forward_round1/1001_wt_v_try3.mod            program aborted
      forward_round1/1001_wt_v_try4.mod            program aborted
      heuristics: program aborted
round file : forward_round1/round_summary.md (full per-run record incl. heuristics)
