components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__round_summary_json.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
assertion_line: 1027
expression: read(&round_dir.join(ROUND_SUMMARY_JSON))
---
{
  "schema_version": 4,
  "generated": "[TIMESTAMP]",
  "plan_digest": "[DIGEST]",
  "initial_model": "1001.mod",
  "out_dir": "scm/1001",
  "round": "forward_round1",
  "direction": "forward",
  "index": 1,
  "phase_index": 1,
  "complete": true,
  "reference_model": "base/1001_base.mod",
  "reference_ofv": 1000.0,
  "reference_files": {
    "run_dir": "base/1001_base",
    "lst": "base/1001_base/1001_base.lst",
    "ext": "base/1001_base/1001_base.ext",
    "summary_json": "base/1001_base/pharos_summary.json"
  },
  "alpha": 0.05,
  "retained_before": [],
  "retained_after": [
    "WT_CL"
  ],
  "removed_before": [],
  "counts": {
    "candidates": 3,
    "succeeded": 3,
    "unusable": 0,
    "withdrawn": 0,
    "retries": 0
  },
  "all_succeeded": true,
  "any_heuristics": false,
  "any_unusable": false,
  "winner": "WT_CL",
  "decision": "added WT_CL (p = 7.744e-6, dOFV = -20.000)",
  "scm_status": "running",
  "next": "continue forward selection",
  "timing": {
    "started": "[TIMESTAMP]",
    "ended": "[TIMESTAMP]",
    "wall_seconds": 90.0,
    "estimation_seconds": 3.0
  },
  "candidates": [
    {
      "candidate": "WT_CL",
      "action": "add WT_CL",
      "status": "succeeded",
      "model": "forward_round1/1001_wt_cl.mod",
      "selected": true,
      "rank": 1,
      "thetas": [
        4
      ],
      "initial": 0.1,
      "fixed": 0.0,
      "ofv": 980.0,
      "delta_ofv": -20.0,
      "statistic": 20.0,
      "df": 1,
      "p_value": 7.744216431044086e-6,
      "critical_delta_ofv": 3.841458820694127,
      "significant": true,
      "heuristics": [],
      "attempts": [
        {
          "model": "forward_round1/1001_wt_cl.mod",
          "outcome": "succeeded",
          "timing": {
            "started": "[TIMESTAMP]",
            "ended": "[TIMESTAMP]",
            "wall_seconds": 90.0,
            "estimation_seconds": 1.0
          }
        }
      ],
      "files": {
        "run_dir": "forward_round1/1001_wt_cl",
        "lst": "forward_round1/1001_wt_cl/1001_wt_cl.lst",
        "ext": "forward_round1/1001_wt_cl/1001_wt_cl.ext",
        "summary_json": "forward_round1/1001_wt_cl/pharos_summary.json"
      },
      "timing": {
        "started": "[TIMESTAMP]",
        "ended": "[TIMESTAMP]",
        "wall_seconds": 90.0,
        "estimation_seconds": 1.0
      }
    },
    {
      "candidate": "CRCL_CL",
      "action": "add CRCL_CL",
      "status": "succeeded",
      "model": "forward_round1/1001_crcl_cl.mod",
      "selected": false,
      "rank": 2,
      "thetas": [
        5
      ],
      "initial": 0.1,
      "fixed": 0.0,
      "ofv": 996.0,
      "delta_ofv": -4.0,
      "statistic": 4.0,
      "df": 1,
      "p_value": 0.045500263896358625,
      "critical_delta_ofv": 3.841458820694127,
      "significant": true,
      "heuristics": [],
      "attempts": [
        {
          "model": "forward_round1/1001_crcl_cl.mod",
          "outcome": "succeeded",
          "timing": {
            "started": "[TIMESTAMP]",
            "ended": "[TIMESTAMP]",
            "wall_seconds": 90.0,
            "estimation_seconds": 1.0
          }
        }
      ],
      "files": {
        "run_dir": "forward_round1/1001_crcl_cl",
        "lst": "forward_round1/1001_crcl_cl/1001_crcl_cl.lst",
        "ext": "forward_round1/1001_crcl_cl/1001_crcl_cl.ext",
        "summary_json": "forward_round1/1001_crcl_cl/pharos_summary.json"
      },
      "timing": {
        "started": "[TIMESTAMP]",
        "ended": "[TIMESTAMP]",
        "wall_seconds": 90.0,
        "estimation_seconds": 1.0
      }
    },
    {
      "candidate": "WT_V",
      "action": "add WT_V",
      "status": "succeeded",
      "model": "forward_round1/1001_wt_v.mod",
      "selected": false,
      "rank": 3,
      "thetas": [
        6
      ],
      "initial": 0.1,
      "fixed": 0.0,
      "ofv": 999.0,
      "delta_ofv": -1.0,
      "statistic": 1.0,
      "df": 1,
      "p_value": 0.31731050786291404,
      "critical_delta_ofv": 3.841458820694127,
      "significant": false,
      "heuristics": [],
      "attempts": [
        {
          "model": "forward_round1/1001_wt_v.mod",
          "outcome": "succeeded",
          "timing": {
            "started": "[TIMESTAMP]",
            "ended": "[TIMESTAMP]",
            "wall_seconds": 90.0,
            "estimation_seconds": 1.0
          }
        }
      ],
      "files": {
        "run_dir": "forward_round1/1001_wt_v",
        "lst": "forward_round1/1001_wt_v/1001_wt_v.lst",
        "ext": "forward_round1/1001_wt_v/1001_wt_v.ext",
        "summary_json": "forward_round1/1001_wt_v/pharos_summary.json"
      },
      "timing": {
        "started": "[TIMESTAMP]",
        "ended": "[TIMESTAMP]",
        "wall_seconds": 90.0,
        "estimation_seconds": 1.0
      }
    }
  ]
}
