components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__round_summary_md.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
assertion_line: 1031
expression: read(&round_dir.join(ROUND_SUMMARY_MD))
---
# forward_round1

- initial model: `1001.mod`
- direction: forward
- reference: `base/1001_base.mod` (OFV 1000.000)
- alpha: 0.05
- all models minimized: yes
- heuristic checks fired: no
- decision: added WT_CL (p = 7.744e-6, dOFV = -20.000)
- retained before this round: none
- added after this round: WT_CL
- wall time: 1m 30s
- next: continue forward selection

| candidate | model | attempts | status | OFV | ΔOFV | crit ΔOFV | df | p | significant | selected | estimate (RSE%) | cond# | heuristic checks |
|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
| WT_CL | `forward_round1/1001_wt_cl.mod` | 1 | succeeded | 980.000 | -20.000 | 3.841 | 1 | 7.7442e-6 | yes | **yes** | 0.250 (N/A) |  |  |
| CRCL_CL | `forward_round1/1001_crcl_cl.mod` | 1 | succeeded | 996.000 | -4.000 | 3.841 | 1 | 4.5500e-2 | yes |  | 0.150 (N/A) |  |  |
| WT_V | `forward_round1/1001_wt_v.mod` | 1 | succeeded | 999.000 | -1.000 | 3.841 | 1 | 3.1731e-1 | no |  | 0.050 (N/A) |  |  |
