components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__status_completed_retained.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
assertion_line: 852
expression: text
---
<scm summary> scm/1001   completed (updated [TIMESTAMP]) · forward -> backward · 5 rounds complete
model      : 1001.mod   alphas: forward 0.05, backward 0.001   cov step: off
candidates : WT_CL, CRCL_CL, WT_V
retained   : WT_CL
final model: final/1001_scm_final.mod (OFV 979.500)
rounds     :
  reference          base model fitted (OFV 1000.000)
  forward_round1     added WT_CL (p = 7.744e-6, dOFV = -20.000)
  forward_round2     added CRCL_CL (p = 1.431e-2, dOFV = -6.000) [1 retry]
  forward_round3     no candidate significant at alpha 0.05; forward selection stopped
  backward_round1    dropped CRCL_CL (p = 1.431e-2, dOFV = +6.000)
  backward_round2    every covariate significant at alpha 0.001; backward elimination stopped

records    : scm_summary.{json,md} · round_summary.{json,md} in each round dir
